[gd_scene load_steps=2 format=3 uid="uid://gomoku_game_scene"]

[ext_resource type="Script" path="res://scripts/gomoku_game.gd" id="1"]

[node name="GomokuGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.9, 0.85, 0.7, 1)

[node name="BoardContainer" type="Control" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -350.0
offset_right = 350.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="PlayerInfo" type="Panel" parent="."]
layout_mode = 1
offset_left = 50.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0

[node name="VBox" type="VBoxContainer" parent="PlayerInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Label" type="Label" parent="PlayerInfo/VBox"]
layout_mode = 2
text = "玩家"
horizontal_alignment = 1

[node name="Stone" type="ColorRect" parent="PlayerInfo/VBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="AIInfo" type="Panel" parent="."]
layout_mode = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 100.0
offset_right = -50.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="AIInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Label" type="Label" parent="AIInfo/VBox"]
layout_mode = 2
text = "角色"
horizontal_alignment = 1

[node name="Stone" type="ColorRect" parent="AIInfo/VBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
color = Color(1, 1, 1, 1)

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
offset_left = 50.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 80.0
text = "返回"

[node name="AIFirstButton" type="Button" parent="."]
layout_mode = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = 80.0
grow_horizontal = 0
text = "你先吧"
